--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "2"
 services:
    namenode:
-      image: apache/hadoop:3
+      image: kjankiewicz/namenode:3.3.6
       hostname: namenode
       command: ["hdfs", "namenode"]
       ports:
@@ -11,14 +11,14 @@ services:
       environment:
           ENSURE_NAMENODE_DIR: "/tmp/hadoop-root/dfs/name"
    datanode1:
-      image: apache/hadoop:3
+      image: apache/hadoop:3.3.6
       command: ["hdfs", "datanode"]
       env_file:
         - ./config  
       deploy:
         replicas: 2     
    resourcemanager:
-      image: apache/hadoop:3
+      image: apache/hadoop:3.3.6
       hostname: resourcemanager
       command: ["yarn", "resourcemanager"]
       ports:
@@ -28,7 +28,7 @@ services:
       volumes:
         - ./test.sh:/opt/test.sh
    nodemanager:
-      image: apache/hadoop:3
+      image: apache/hadoop:3.3.6
       command: ["yarn", "nodemanager"]
       env_file:
         - ./config
